feat: first release

--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -21,3 +21,4 @@ jobs:
         preset: 'angular'
         tag-prefix: 'v'
         output-file: 'CHANGELOG.md'
+        package-json: './projects/redyform/package.json'
