--- a/projects/redyform/package.json
+++ b/projects/redyform/package.json
@@ -1,15 +1,9 @@
 {
   "name": "@tommy4st/redyform",
   "version": "0.0.15",
-  "author": {
-    "name": "Thomas Wilhelm-Stein",
-    "email": "tommy4st@gmail.com"
-  },
+  "author": "Thomas Wilhelm-Stein <tommy4st@gmail.com>",
   "repository": {
-    "url": "git@github.com:tommy4st/redyform.git"
-  },
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
+    "url": "git+ssh://git@github.com/tommy4st/redyform.git"
   },
   "peerDependencies": {
     "@angular/common": "^9.1.4",
@@ -18,5 +12,15 @@
     "@angular/cdk": "^9.2.2",
     "@angular/forms": "^9.1.4",
     "angular-pipes": "^10.0.0"
-  }
+  },
+  "description": "Presentation agnostic, dynamic forms framework",
+  "bugs": {
+    "url": "https://github.com/tommy4st/redyform/issues"
+  },
+  "homepage": "https://github.com/tommy4st/redyform#readme",
+  "keywords": [
+    "angular",
+    "form"
+  ],
+  "license": "Apache-2.0"
 }
